Final remake of the project - got scalafx to work